--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
  * {
     margin: 0;
     padding: 0;
-    font-family: 'Mulish', sans-serif;
-    list-style-type: none;
+    font-family: 'Noto Serif', serif;
+    list-style: none;
     text-decoration: none;
     box-sizing: border-box;
     outline: none;
@@ -10,6 +10,7 @@
 html{
   scroll-behavior: smooth;
 }
+
 :root {
     --primary-color: #2b81e4;
     --secondary-color: #eee;
@@ -21,9 +22,7 @@ html{
 }
 .navbar{
   justify-content: space-between;
-  background-color: var(--button-color) ;
-  font-size: 1.2rem;
-}
+} 
 .nav-item::after{
   content:'';
   display:block;
@@ -35,34 +34,23 @@ html{
 .nav-item:hover::after{
   width:100%;
 }
+.card:hover{
+  transition-delay: 2s;
+}
 
-.nav-link{
-  padding:15px 5px;
-  transition:0.2s;
-}
-.dropdown-item.active,
- .dropdown-item:active{
-  color:#ffffff;
-}
-.dropdown-item:focus, 
-.dropdown-item:hover{
-  background:#9df9ef;
-}
-.navbar-nav{
-color: #fff !important;
 
-}
+
 /* ======================================================carousel====================================================== */
  #carousel .carousel-item.river {
-    background-image: url("../images/5.jpg");
+    background-image: url("../images/image/munsyari.jpg");
   }
 
 #carousel .carousel-item.riverside {
-  background-image: url("../images/2.jpg");
+  background-image: url("../images/image/mun.jpg");
 }
 
 #carousel .carousel-item.rivervalley {
-  background-image: url("../images/3.jpg");
+  background-image: url("../images/image/trek.jpg");
 }
 
 #carousel .carousel-item {
@@ -95,6 +83,8 @@ color: #fff !important;
 #carousel .caption p {
   animation-duration: 1s;
   animation-delay: 2.2s;
+  text-align: justify;
+  font-size: 1.2rem;
 }
 
 #carousel .caption a {
@@ -128,25 +118,137 @@ background-color:var(--button-color-hover);
   background-color: var(--button-color);
   border-color: var(--button-color-hover);
 } 
-/* =====================================================About us =============================== */
- #About-us{
+
+
+.header{
+  /* background: linear-gradient(to bottom, #8a8af8 0%, #99ffcc 100%); */
+margin: 0%;
+}
+
+.nav-pills-custom .nav-link {
+  color: #fff;
+  background: #28a745;
+  position: relative;
+
+}
+.tab-content{
+  text-align: justify;
+}
+.tab-content .tab-pane p{
+  font-size: 17px;
+}
+.tab-content .desinationImg{
+  width: 100%;
+  height: auto;
+}
+.tab-content a{
+  text-decoration: none;
+  
+}
+.nav-pills-custom .nav-link.active {
+  color: #45b649;
+  background: #fff;
+}
+
+/* Add indicator arrow for the active tab */
+@media (min-width: 992px) {
+  .nav-pills-custom .nav-link::before {
+      content: '';
+      display: block;
+      border-top: 8px solid transparent;
+      border-left: 10px solid #fff;
+      border-bottom: 8px solid transparent;
+      position: absolute;
+      top: 50%;
+      right: -10px;
+      transform: translateY(-50%);
+      opacity: 0;
+  }
+}
+
+.nav-pills-custom .nav-link.active::before {
+  opacity: 1;
+}
+
+.imageCombo .card{
+  border-radius: 0;
+}
+
+.imageCombo {
+  /* background: linear-gradient(to bottom, #66ff99 0%, #00ccff 100%); */
+  position: relative;
   text-align: center;
-<<<<<<< HEAD
-  margin-top: 5rem;
-  margin-bottom: 2rem;
-=======
-/*   margin: 5rem; */
->>>>>>> 979ad143ed5e8d4ee5449e31add93396632cb0af
+  color: white;
+ font-weight: bold;
+ padding-top: 2rem;
+ padding-bottom: 2rem;
+ 
+}
+.imageCombo .card-img{
+  /* opacity: 0.5; */
+  width: 100%;
+  height: 100%;
+  }
+
+.imageCombo .card:hover h4{
+  visibility: visible;
+}
+
+.imageCombo .colSet{
+  padding: 0;
+}
+.imageCombo h4{
+  visibility: hidden;
+ margin-top: 30%;
+ margin-bottom: auto;
+}
+.imageCombo h3{
+  visibility: hidden;
+}
+.imageCombo .card:hover h3{
+  visibility: visible;
+  }
+.imageCombo .locationIcon{
+  /* visibility: hidden; */
+  margin-top: 20%;
+}
+.imageCombo .locationIconParent img{
+visibility: hidden;
+}
+.imageCombo .card:hover img{
+  visibility: visible;
+  opacity: .5;
+}
+@media (max-width:350px){
+  .imageCombo h3, h4 {
+    font-size: 17px;
+ }
+ }
+ @media (max-width:300px){
+  .imageCombo h3, h4 {
+    font-size: 14px;
+ }
+ }
+
+/* ============================About us =============================== */
+ #About-us{
+  /* background: linear-gradient(to bottom, #99ff99 0%, #6699ff 100%); */
+  text-align: center;
+  /* margin-top: 2rem; */
+  padding: 2rem;
 }
 #About-us p{
-  font-size: 1rem;
+  font-size: 1.2rem;
   text-align: justify;
-  margin-top: 1rem;
+  /* margin: 1rem 0 3rem 0; */
   text-overflow: inherit; 
 }
+
 /* ===================================================Serch box============================= */
 .search-box{
   text-align: center;
+  margin-bottom: 2rem;
+  
 }
  .search-box input {
 	outline: none;
@@ -204,7 +306,8 @@ input::-webkit-search-cancel-button {
 	background-color: #fff;
 }
 #srch input[type=search]:focus {
-	width: 30rem;
+  width: 50vw;
+  
 	padding-left: 32px;
 	color: #000;
 	background-color: #fff;
@@ -216,23 +319,30 @@ input::-webkit-search-cancel-button {
 #srch input::-webkit-input-placeholder {
 	color: transparent;
 } 
+/* .search-container button:hover {
+  background: #ccc;
+} */
+
 /* ====================================================Services============================================================= */
 .service{
   width: 100%;
-  padding: 2rem;
   text-align: center;
 }
-.service h1{
-  margin: 2rem;
-}
+#service{
 
+  padding: 0 2rem 0 2rem;
+}
+#service h1{
+  padding: 2rem;
+
+}
 .services{
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
   margin: 1rem;
 }
-.card{
+.service .card{
   margin-bottom: 2rem;
 }
 .card-header-1 {
@@ -284,41 +394,110 @@ background: var(--light-grey-color);
   background: #57cc99;
   cursor: pointer;
 }
-
- 
-/* ====================================Gallery  ============================== */
-
-.thumb {
-	margin-bottom: .8rem;
-}
-.thumb:last-child {
-	margin-bottom: 0;
-}
-.thumb 
-figure img {
-  -webkit-filter: grayscale(100%);
-  filter: grayscale(100%);
-  -webkit-transition: .3s ease-in-out;
-  transition: .3s ease-in-out;
-}
-.thumb 
-figure:hover img {
-  -webkit-filter: grayscale(0);
-  filter: grayscale(0);
+/* ============================ Gallary ================================== */
+.gallery{
+  /* background: linear-gradient(to bottom, #99ff99 0%, #6699ff 100%); */
+ margin-top: -1rem;
 }
 
-/* =========================================Trek package============================= */
+/* Contact */
+#Contact{
+  background: linear-gradient(to bottom, #99ff99 0%, #6699ff 100%);
+}
+#Contact h1{
+  padding: 2rem;
+}
+ /* ===============================================================footer============================================= */
+
+#footer h5{
+ padding-left: 10px;
+   border-left: 3px solid #eeeeee;
+   padding-bottom: 6px;
+   margin-bottom: 20px;
+   color:#ffffff;
+}
+#footer a {
+   color: #ffffff;
+   text-decoration: none !important;
+   background-color: transparent;
+   -webkit-text-decoration-skip: objects;
+}
+#footer ul li {
+   color: #ffffff;
+   text-decoration: none !important;
+   background-color: transparent;
+   -webkit-text-decoration-skip: objects;
+}
+#footer ul.social li{
+ padding: 3px 0;
+}
+#footer ul.social li a i {
+   margin-right: 5px;
+ font-size:25px;
+ -webkit-transition: .5s all ease;
+ -moz-transition: .5s all ease;
+ transition: .5s all ease;
+}
+#footer ul.social li:hover a i {
+ font-size:30px;
+ margin-top:-10px;
+}
+#footer ul.social li,
+#footer ul.quick-links li {
+ color:#ffffff;
+}
+#footer ul.social li:hover{
+ color:#eeeeee;
+}
+#footer ul.quick-links li{
+ padding: 3px 0;
+ -webkit-transition: .5s all ease;
+ -moz-transition: .5s all ease;
+ transition: .5s all ease;
+}
+#footer ul.quick-links li:hover{
+ padding: 3px 0;
+ margin-left:5px;
+ font-weight:700;
+}
+#footer ul.quick-links li i{
+ margin-right: 6px;
+}
+
+#footer ul.quick-links li:hover i{
+   font-weight: 700;
+}
+.h6 a:hover{
+ font-weight: 700;
+}
+@media (max-width:767px){
+ #footer h5 {
+   padding-left: 0;
+   border-left: transparent;
+   padding-bottom: 0px;
+   margin-bottom: 10px;
+}
+}
+#footer{
+ padding-bottom: 1rem;
+ padding-top: 1.5rem;
+} 
+/* ==================================== */
+
+
+/* ========================================= */
 .wrapper{
-  padding: 30px 15px;
+  padding: 2rem 0 2rem 0;
+  /* background: linear-gradient(to bottom,  #99ffcc 30%, #68b3fa 100%); */
 }
-.wrapper .row{
-  max-width: 1024px;
+.wrapper .morePackages{
+  margin-left: 45%;
+}
+.row{
+  /* max-width: 1024px; */
   margin: 0px auto;
 }
 
-*,*:before,*:after{
-  box-sizing: border-box;
-}
 .cf:before,
 .cf:after{
   display: table;
@@ -356,13 +535,13 @@ figure:hover img {
   margin-bottom: 30px;
 }
 .fancy-card.one{
-   background-image: url("../images/2.jpg");
+   background-image: url("../images/image/Darma\ vally.jpg");
 }
 .fancy-card.two{
-   background-image: url("../images/6.jpg");
+   background-image: url("../images/image/alpine-resort-kmvn-is.jpg");
 }
 .fancy-card.three{
-   background-image: url("../images/8.jpg");
+   background-image: url("../images/image/1.jpg");
 }
 
 .fancy-card .bg-overlay{
@@ -412,6 +591,7 @@ figure:hover img {
   border-radius: 2px;
   margin: 12px auto;
 }
+
 
 /*horizontal border elements (top & bottom)*/
 .fancy-card .v-border{
@@ -512,89 +692,94 @@ figure:hover img {
 }
 /*medium and large profiles*/
 @media screen and (min-width: 768px){
-  
+   
   .fancy-card{
     width: 30%;
     margin: 0% 1.66% 3.33% 1.66%;
   }
   
 }
-<<<<<<< HEAD
-/* =====================================================footer=============================== */
-.bg-success{
-  padding-top: 1.5rem;
-}
-#footer h5{
- padding-left: 10px;
-   border-left: 3px solid #eeeeee;
-   padding-bottom: 6px;
-   margin-bottom: 20px;
-   color:#ffffff;
-}
-#footer a {
-   color: #ffffff;
-   text-decoration: none !important;
-   background-color: transparent;
-   -webkit-text-decoration-skip: objects;
-}
-#footer ul li {
-   color: #ffffff;
-   text-decoration: none !important;
-   background-color: transparent;
-   -webkit-text-decoration-skip: objects;
-}
-#footer ul.social li{
- padding: 3px 0;
-}
-#footer ul.social li a i {
-   margin-right: 5px;
- font-size:25px;
- -webkit-transition: .5s all ease;
- -moz-transition: .5s all ease;
- transition: .5s all ease;
-}
-#footer ul.social li:hover a i {
- font-size:30px;
- margin-top:-10px;
-}
-#footer ul.social li,
-#footer ul.quick-links li {
- color:#ffffff;
-}
-#footer ul.social li:hover{
- color:#eeeeee;
-}
-#footer ul.quick-links li{
- padding: 3px 0;
- -webkit-transition: .5s all ease;
- -moz-transition: .5s all ease;
- transition: .5s all ease;
-}
-#footer ul.quick-links li:hover{
- padding: 3px 0;
- margin-left:5px;
- font-weight:700;
-}
-#footer ul.quick-links li i{
- margin-right: 6px;
+
+.packageDetail{
+  padding: 2rem;
 }
 
-#footer ul.quick-links li:hover i{
-   font-weight: 700;
+/* ************************************booking form ************************************* */
+
+.booking-tour.inlined {
+  width: 49%;
+  display: inline-block;
+  float: left;
+  margin-left: 1%;
 }
-.h6 a:hover{
- font-weight: 700;
+
+label {
+  display: block;
+  padding-bottom: 1rem;
+  font-size: 1.25em;
 }
-@media (max-width:767px){
- #footer h5 {
-   padding-left: 0;
-   border-left: transparent;
-   padding-bottom: 0px;
-   margin-bottom: 10px;
+
+input, select, textarea {
+  border-radius: 2px;
+  border: 1px solid #777;
+  box-sizing: border-box;
+  font-size: 1.25em;
+  width: 100%;
+  padding: 10px;
 }
+
+.booking-tour .inlined input {
+  width: 95%;
+  display: inline-block;
 }
-#footer{
- padding-bottom: 1rem;
+
+.booking-tour.personCount {
+  width: 20%;
+  display: inline-block;
+  float: left;
+  /* margin-right: 2px; */
+  margin-left: 10%;
 }
-=======
->>>>>>> 979ad143ed5e8d4ee5449e31add93396632cb0af
+.booking-tour .personCount input {
+  width: 95%;
+  display: inline-block;
+}
+textarea {
+  height: 10rem;
+}
+
+hr {
+  border: 1px dotted #ccc;
+}
+.tour_selection {
+  box-sizing: border-box;
+  width: 50%;
+}
+@media (max-width:370px){
+  #booking h1{
+    font-size: 26px;
+  } 
+}
+@media (max-width:240px){
+  #booking h1{
+    font-size: 18px;
+  } 
+}
+
+/* things to do */
+.things{ 
+height: 12rem;
+width: 100%;
+}
+.things-to-do{
+  height: 24rem;
+  width: 100%;
+}
+.Inclusions{
+  border: none;
+
+}
+.Inclusions li {
+  font-size: 1.1rem;
+  
+}
