--- a/css/responsive.css
+++ b/css/responsive.css
@@ -73,15 +73,24 @@
 /* Medium devices (landscape tablets, 768px and up) */
 @media (min-width: 768px) and (max-width: 991.98px) {
     
-  
+    
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
-@media only  (min-width: 992px) and (max-width: 1200px) {
+@media  only screen and (min-width: 992px) and (max-width: 1200px) {
+    .things-slider{
+        padding-left: 20rem;
+        padding-right: 20rem;
+      }
+
 
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
+    .things-slider{
+        padding-left: 20rem;
+        padding-right: 20rem;
+      }
 
 }
