--- a/css/style.css
+++ b/css/style.css
@@ -554,6 +554,9 @@ background: var(--light-grey-color);
 .fancy-card.four{
   background-image: url("../images/image/mallikarjun-temple-askot_1470306345.jpeg");
 }
+.fancy-card.five{
+  background-image: url("../images/image/narayan-ashram.jpg");
+}
 
 .fancy-card .bg-overlay{
     background: rgba(0,0,0,0.25);
